# tinyagent

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  tinyagent.py
docs/: README.md  decisions.md  peer-review-round2.json  peer-review.json  plan.md  qa-report.md  requirements.md  research.md  revisions.md  tasks.md
docs/qa/: behavioral.json  spec-coverage.json  static-analysis.json
examples/: calculator_mcp_stdio.py  http_demo.py  inproc_mcp_echo.py  tracing_otlp.py
tests/: conftest.py  test_agent_init.py  test_agent_loop.py  test_agent_loop_sync.py  test_agent_trace.py  test_callback_registry.py  test_example_tools.py  test_examples_run.py  test_exceptions.py  test_imports.py  test_mcp_stdio.py  test_otel.py  test_otel_hierarchy.py  test_otel_setup.py  test_pricing.py  test_pricing_override.py  test_prune.py  test_request_timeout.py  test_tool_choice_retry.py  test_tool_decorator.py
tests/integration/: conftest.py  test_e2e_anyllm.py
